<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/order_bg">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/roof_terracotta">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:layout_centerVertical="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_title"
                android:textColor="@color/write"
                android:layout_toRightOf="@+id/backIv"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/dragTip"
        android:gravity="center_vertical"
        android:layout_marginLeft="5dp"
        />

    <com.yydcdut.sdlv.SlideAndDragListView
        android:id="@+id/slidingListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/list_selector"
        />

    <TextView
        android:id="@+id/regainTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/regain_default_order"
        />

</LinearLayout>