<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.bigkoo.convenientbanner.ConvenientBanner
                android:id="@+id/convenientBanner"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:canLoop="true" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@drawable/fm_normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/fm" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:background="@drawable/upbill" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/everyDayRecommend" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:background="@drawable/upbill" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/rank" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/orderTv"
                    android:layout_width="100dp"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_rec_two_cirle_red"
                    android:textSize="12dp"
                    android:text="@string/settingOrder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/seeVideo" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/coverPic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp" />

        <TextView
            android:id="@+id/musicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/coverPic"
            android:text="这是一首歌"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/musicTitle"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/coverPic"
            android:text="@string/bottomTipMove" />

    </RelativeLayout>


</LinearLayout>




